Cascading Change Log

2.2.0 [unreleased]

  Added c.t.h.HfsProps to localize optional Hadoop HDFS specific properties, specifically provides properties for
  enabling the combining of small files into larger splits.

  Updated c.t.h.Hfs to allow for smaller files to be combined into fewer splits, thus fewer map tasks. @sjlee

  Updated c.p.SubAssembly to support setting local and step properties via the c.p.ConfigDef.

  Updated c.o.Buffer to allow implementations to disable nulling of non-grouping fields after the arguments iterator
  has completed. This simplifies appending aggregated fields to the incoming tuple stream.

  Updated c.t.Fields to retain relative positions when calling Fields#append.

  Updated c.t.Fields to return appending value when calling Fields#append on Fields.NONE and optimized Fields#subtract
  when subtracting Fields.NONE.

  Added c.f.AssemblyPlanner interface to allow for platform independent generative c.f.Flow planning.

  Fixed issue in local mode where an OOME could cause a cascading set of additional OOMEs making the jvm unstable.

  Updated c.f.s.MemoryCoGroupGate and c.f.l.s.LocalGroupByGate to drain internal collections when pipelining
  tuples downstream in the pipeline.

  Added c.t.h.BigDecimalSerialization to allow Hadoop to serialize and deserialize j.m.BigDecimal instances.

  Update slf4j to version 1.7.2.

  Added coercion support for j.m.BigDecimal.

  Added c.p.PlatformSuite annotation allowing a c.PlatformTestCase sub-class to be marked as being a JUnit suite
  of tests accessible, by default, via a static "suite" method.

  Updated provided c.s.Scheme subclasses to honor field type information.

  Updated c.o.expression, c.o.aggregator, and c.p.assembly operations to honor field type information.

  Updated c.o.Identity and c.p.a.Coerce to uses field type information during coercion.

  Added c.t.t.CoercibleType interface to allow for customization of individual field data types and formats. Also