@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.2.0 [unreleased]
 
+  Fixed issue where c.t.l.FileTap#getFullIdentifier() was not returning the fully qualified path.
+
   Added c.t.h.HfsProps to localize optional Hadoop HDFS specific properties, specifically provides properties for
   enabling the combining of small files into larger splits.
 
